patterns/Copytext/copytext.styl
.copytext

  &--150
    font-size var(--font-size-base)
    font-weight var(--font-weight-regular)
    line-height 1.8rem
    padding 0.5rem 0 0.1rem

  &--110
    font-weight var(--font-weight-regular)
    font-size 1.4rem
    line-height 1.8rem
    padding 0.5rem 0 0.1rem

    // TODO: Evaluate if this is the most fitting breakpoint
    @media (min-width 550px)
      font-size 1.8rem
      line-height 2.4rem
      padding 0


  // Styling for generic html elements, e.g. in cases
  // of WYSIWYG texts
  p
    margin-bottom 1.2rem

  * + p
    margin-top 0.6rem

  a
    text-decoration underline
    color var(--link)
    font-weight var(--font-weight-medium)
    letter-spacing 0.02rem

    &:hover
      text-decoration none

    &:active
      color var(--notification)
      text-decoration none

  strong
    font-weight var(--font-weight-semi-bold)

  ul
  ol
    padding-left 3.6rem

    li
      padding-left 0.2rem

    li + li
      margin-top 1.2rem

  ol
    list-style-type decimal

  ul
    li
      position relative

    li:before
      display block
      content ''
      height 0.8rem
      width 0.8rem
      background var(--neutral-60)
      border 1px solid var(--primary)
      border-radius 4px
      position absolute
      left -1.6rem
      top 0.4rem

  img
    max-width 100%

  blockquote
    font-size 2.1rem
    line-height 2.4rem
    padding 1.2rem 0 1.2rem 2rem
    border-left 3px solid var(--neutral-40)

    cite
      display block
      font-size 1.3rem
      line-height 1.8rem
      color var(--neutral-70)
      margin-top 0.6rem

